# ytm-browser

./: .gitignore  LICENSE  NEED_TO_INSTALL_FFMPEG.txt  README.md  dev_app.py  main.py  pyproject.toml
tests/test_responses/: test_parse_responses.py
utils/: json_utils.py  parse_util.py  retry.py
ytm_browser/: start_endpoints.py
ytm_browser/core/: api_client.py  credentials.py  custom_exceptions.py  downloader.py  responses.py
ytm_browser/core/client/: api_client.py
ytm_browser/core/parser/: parse_util.py
ytm_browser/textual_ui/: app.py  browse_app.py  browse_tab.py  download_tab.py  modal_screens.py  settings_tab.py  styles.tcss
