[tool.poetry]
name = "ytm-browser"
version = "0.0.1"
description = "Youtube Music Browser"
authors = ["nickkitovsky <1825545+nickkitovsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ytm_browser"}]

[tool.poetry.dependencies]
python = "^3.12"
curl-cffi = "^0.6.3"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff] 
fix = true 
line-length = 79 
select = ["ALL"] 
ignore = ["D1", "D203", "D213", "FA102", "ANN101", "ANN102", "TD002", "TD003"] 
cache-dir = ".ruff-cache/" 

[tool.ruff.isort] 
no-lines-before = ["standard-library", "local-folder"] 
known-third-party = [] 
known-local-folder = ["whole_app"] 

[tool.ruff.extend-per-file-ignores] 
"tests/*.py" = ["ANN401", "S101", "S311"]

# comment it, if unstable work ruff format 
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"